# amfitrack_cpp_SDK

./: Amfitrack.cpp  Amfitrack.hpp  CMakeLists.txt  example.cpp
lib/amfiprotapi/: lib_AmfiProt.cpp  lib_AmfiProt.hpp  lib_AmfiProt_API.cpp  lib_AmfiProt_API.hpp  lib_AmfiProt_Amfitrack.cpp  lib_AmfiProt_Amfitrack.hpp
lib/lib_generic_parameter/: lib_Generic_Parameter.c  lib_Generic_Parameter.h
lib/lib_queue/: lib_Queue.c  lib_Queue.h
src/: AmfitrackNode.cpp  AmfitrackNode.h  usb_connection.cpp  usb_connection.h
